--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -40,6 +40,10 @@ ddu-ff = '''
 ddu-ff-filter = '''
     inoremap <buffer> <CR> <Esc><Cmd>call ddu#ui#ff#close()<CR>
     nnoremap <buffer> <CR> <Cmd>call ddu#ui#ff#close()<CR>
+    inoremap <buffer> <C-n> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')+1,0) \| redraw")<CR>
+    inoremap <buffer> <C-p> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')-1,0) \| redraw")<CR>
+    nnoremap <buffer> <C-n> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')+1,0) \| redraw")<CR>
+    nnoremap <buffer> <C-p> <Cmd>call ddu#ui#ff#execute("call cursor(line('.')-1,0) \| redraw")<CR>
     nnoremap <buffer> q <Cmd>call ddu#ui#ff#close()<CR>
 '''
 
