modify lazy loading setting for colorscheme to reflect changes correctly

--- a/.vim/toml/dein_colorscheme_lazy.toml
+++ b/.vim/toml/dein_colorscheme_lazy.toml
@@ -52,5 +52,8 @@ hook_add = '''
     augroup END
 '''
 hook_source = '''
-    colorscheme sonokai
+    augroup setColorschemeGroup
+        autocmd!
+        autocmd VimEnter * nested colorscheme sonokai
+    augroup END
 '''
