--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -433,3 +433,10 @@ on_func = 'quickrun#'
 hook_add = '''
     nnoremap <silent> ,q :call quickrun#run()<CR>
 '''
+
+[[plugins]]
+repo = 'simrat39/rust-tools.nvim'
+on_ft = 'rust'
+lua_source = '''
+    require('rust-tools').setup()
+'''
