add keymap for vimtex-compile

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -117,6 +117,7 @@ hook_source = '''
         \   '-interaction=nonstopmode',
         \ ],
         \}
+    nmap <leader>tc <Plug>(vimtex-compile)
 '''
 
 [[plugins]]
