--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -314,6 +314,7 @@ on_func = 'signature#'
 repo = 'kevinhwang91/nvim-hlslens'
 on_event = ['BufRead', 'CursorHold']
 lua_source = '''
+require('hlslens').setup()
 local opts = {noremap = true, silent = true}
 vim.keymap.set('n', 'n', "<Cmd>execute('normal! ' . v:count1 . 'n')<CR><Cmd>lua require('hlslens').start()<CR>", opts)
 vim.keymap.set('n', 'N', "<Cmd>execute('normal! ' . v:count1 . 'N')<CR><Cmd>lua require('hlslens').start()<CR>", opts)
