--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -407,7 +407,7 @@ repo = 'skanehira/vsession'
 on_event = 'CursorHold'
 hook_post_source = '''
     let g:vsession_save_last_on_leave = 0
-    let g:vsession_ui = 'popup'
+    let g:vsession_ui = 'fzf'
     nnoremap <silent> <Leader>ss :SaveSession<CR>
     nnoremap <silent> <Leader>sl :LoadSession<CR>
     nnoremap <silent> <Leader>sd :DeleteSession<CR>
