--- a/scoop/scoop_config.json
+++ b/scoop/scoop_config.json
@@ -1,6 +1,6 @@
 {
-    "lastUpdate":  "2022-09-16T09:43:41.5268097+09:00",
-    "SCOOP_REPO":  "https://github.com/ScoopInstaller/Scoop",
-    "SCOOP_BRANCH":  "master",
-    "aria2-enabled":  true
+    "last_update":  "2022-12-14T13:54:44.4591147+09:00",
+    "aria2-enabled":  true,
+    "scoop_branch":  "master",
+    "scoop_repo":  "https://github.com/ScoopInstaller/Scoop"
 }
