fix directory configs for obsidian.nvim

--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -457,8 +457,9 @@ lua_source = '''
     vim.cmd('cd ~')
     require('obsidian').setup({
         dir = 'obsidian_vault',
+        notes_subdir = '01_Inbox',
         daily_notes = {
-            folder = 'daily_notes',
+            folder = '02_Daily',
         },
         completion = {
             nvim_cmp = false,
