--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -91,3 +91,7 @@ on_source = ['ddc.vim']
 [[plugins]]
 repo = 'Shougo/ddc-source-input'
 on_source = ['ddc.vim']
+
+[[plugins]]
+repo = 'matsui54/ddc-buffer'
+on_source = ['ddc.vim']
