--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -7,6 +7,10 @@ hook_source = '''
 '''
 
 [[plugins]]
+repo = 'Shougo/ddc-ui-native'
+on_source = ['ddc.vim']
+
+[[plugins]]
 repo = 'Shougo/ddc-ui-pum'
 on_source = ['ddc.vim']
 
