--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -71,6 +71,7 @@ ddu-filer = '''
     nnoremap <buffer> o <Cmd>call ddu#ui#filer#do_action('expandItem', {'mode': 'toggle'})<CR>
     nnoremap <buffer> O <Cmd>call ddu#ui#filer#do_action('expandItem', {'maxLevel': -1})<CR>
     nnoremap <buffer> p <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'paste'})<CR>
+    nnoremap <buffer> P <Cmd>call ddu#ui#filer#do_action('preview')<CR>
     nnoremap <buffer> q <Cmd>call ddu#ui#ff#do_action('quit')<CR>
     nnoremap <buffer> r <Cmd>call ddu#ui#filer#do_action('itemAction', {'name': 'rename'})<CR>
     nnoremap <buffer> x <Cmd>call ddu#ui#filer#do_action('toggleSelectItem')<CR>
