--- a/.vim/toml/ddc.toml
+++ b/.vim/toml/ddc.toml
@@ -103,3 +103,7 @@ on_source = ['ddc.vim']
 [[plugins]]
 repo = 'tani/ddc-path'
 on_source = ['ddc.vim']
+
+[[plugins]]
+repo = 'ttak0422/ddc-source-nvim-obsidian'
+on_source = ['ddc.vim']
