--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -486,3 +486,9 @@ hook_source = '''
     \   fadeOutMs = 1000,
     \ }
 '''
+
+[[plugins]]
+repo = 'gamoutatsumi/dps-ghosttext.vim'
+depends = ['denops.vim']
+on_cmd = ['GhostStart']
+on_func = 'ghosttext#'
