feat: add ddu-source-window

--- a/.vim/toml/ddu.toml
+++ b/.vim/toml/ddu.toml
@@ -168,6 +168,11 @@ on_source = ['ddu.vim']
 repo = 'kuuote/ddu-source-git_diff'
 on_source = ['ddu.vim']
 
+
+[[plugins]]
+repo = 'kamecha/ddu-source-window'
+on_source = ['ddu.vim']
+
 [[plugins]]
 repo = 'Shougo/ddu-filter-matcher_substring'
 on_source = ['ddu.vim']
