--- a/.vim/toml/dein_lazy.toml
+++ b/.vim/toml/dein_lazy.toml
@@ -302,6 +302,9 @@ repo = 'lambdalisue/gin.vim'
 on_map = '<Plug>(gin-'
 on_cmd = ['Gin', 'GinBuffer', 'GinBranch', 'GinChaperon', 'GinDiff', 'GinEdit', 'GinPatch', 'GinStatus']
 on_func = 'gin#'
+hook_source = '''
+    let g:gin_log_default_args = ['--graph', '--oneline', '--all', '--date=short', '--decorate=short']
+'''
 
 [[plugins]]
 repo = 'mechatroner/rainbow_csv'
